Style apply and crash fixes

--- a/XContactPicker/XContactPicker.csproj
+++ b/XContactPicker/XContactPicker.csproj
@@ -9,13 +9,15 @@
     <RootNamespace>XContactPicker</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>XContactPicker</AssemblyName>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;DEBUG_BORDERS</DefineConstants>
+    <DefineConstants>DEBUG;DEBUG_BORDERS_</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -47,6 +49,7 @@
     <Compile Include="PromptCell.cs" />
     <Compile Include="IContact.cs" />
     <Compile Include="Contact.cs" />
+    <Compile Include="Extenstions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
 </Project>
